K8-files/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: 827566277160.dkr.ecr.us-east-1.amazonaws.com/checkout:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
spec:
  type: ClusterIP
  selector:
    app: checkout
  ports:
    - port: 80
      targetPort: 80
