K8-files/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 3
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          image: 827566277160.dkr.ecr.us-east-1.amazonaws.com/login:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  type: ClusterIP
  selector:
    app: login
  ports:
    - port: 80
      targetPort: 80
