K8-files/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - name: main
          image: 827566277160.dkr.ecr.us-east-1.amazonaws.com/main
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  type: ClusterIP
  selector:
    app: main
  ports:
    - port: 80
      targetPort: 80
