K8-files/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshveggies-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Root → Login
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80

          # Login
          - path: /login(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: login-service
                port:
                  number: 80

          # Home
          - path: /home(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-service
                port:
                  number: 80

          # Cart
          - path: /cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-service
                port:
                  number: 80

          # Checkout
          - path: /checkout(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: checkout-service
                port:
                  number: 80

          # Signup
          - path: /signup(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: signup-service
                port:
                  number: 80
